app/components/CartView/CartView.module.scss
.cart_view {
    display: grid;
    grid-template-columns: auto 418px;
    font-family: Inter;
    @media (max-width:730px) {
        grid-template-columns: 1fr;
    }
}

.cart_view_left {
    grid-column-start: 1;
    grid-column-end: 2;
    @media (max-width:730px) {
        grid-row-start: 1;
        grid-row-end: 2;
    }
}

.cart_view_left_header {
    font-weight: 500;
    font-style: Medium;
    line-height: 100%;
    margin: 40px 0px;
    font-size: 55.4px;
    @media (max-width: 1080px) {
        font-size: 45.4px;
    }
    @media (max-width: 830px) {
        font-size: 35.4px;
    }
    @media (max-width: 730px) {
        font-size: 20.13px;
        margin: 20px 0px;
    }
}

.item_card {
    display: grid;
    grid-template-columns: 201px auto;
    grid-template-rows: 138px 39px;
    overflow: hidden;
    margin-bottom: 32px;
    @media (max-width: 1080px) {
        grid-template-columns: 170px auto;
    }
    @media (max-width: 830px) {
        grid-template-columns: 135px auto;
    }
}

.item_card_img {
    grid-row-start: 1;
    grid-row-end: 3;
    grid-column-start: 1;

    align-self: center;
    object-fit: contain;
    transition: all 0.4s ease;
    height: 150px;
    width: 200px;
    @media (max-width: 1080px) {
        width: 170px;
        height: 135px;
    }
    @media (max-width: 830px) {
        width: 150px;
        height: 120px;
    }
    @media (max-width: 480px) {
        width: 120px;
        height: 100px;
    }
}

.item_card_details {
    margin-left: 22px;
    grid-column-start: 2;
    grid-row-start:1;
    grid-row-end: 2;
    display: flex;
    flex-direction: column;
}

.item_card_details_title {
    font-weight: 500;
    font-style: Medium;
    line-height: 100%;
    letter-spacing: 0%;
    padding-top: 22px;
    margin-bottom: 12px;
    color: #000000;
    font-size: 21.62px;
    @media (max-width: 1080px) {
        font-size: 18.22px;
    }
    @media (max-width: 830px) {
        font-size: 14.82px;
    }
    @media (max-width: 480px) {
        font-size: 11.42px;
    }
}

.item_card_details_description {
    font-weight: 400;
    font-style: Regular;
    line-height: 100%;
    letter-spacing: 0%;
    color: #484848;
    font-size: 18.43px;
    @media (max-width: 1080px) {
        font-size: 15.53px;
    }
    @media (max-width: 830px) {
        font-size: 12.63px;
    }
    @media (max-width: 480px) {

        font-size:9.73px
    }
}

.item_card_buttons_group {
    grid-column-start: 2;
    grid-column-end: 3;
    grid-row-start:2 ;
    margin-left: 22px;
    display: flex;
    flex-direction: row;
    align-items: center;
}

.item_card_buttons_group_left {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    align-items: center;
    font-weight: 500;
    font-style: Medium;
    width: 138px;
    height: 39px;
    font-size: 15.72px;
    border: #000000 0.8px solid;
    border-radius: 30px;
    transition: all 0.4s ease;
    @media (max-width: 1080px) {
        width: 103.5px;
        height: 29.25px;
        font-size: 11.8px;
        border: #000000 0.6px solid;
        border-radius: 22.5px;
    }
    @media (max-width: 730px) {
        width: 138px;
        height: 39px;
        font-size: 15.72px;
        border: #000000 0.8px solid;
        border-radius: 30px;
    }
}

.item_card_buttons_group_remove {
    margin-left: 22px;
    display: flex;
    justify-content: center;
    transition: all 0.4s ease;
    @media (max-width: 1080px) {
        width: 23px;
        height: 24px;
        margin-left: 19px;

    }
    @media (max-width: 830px) {
        width: 18px;
        height: 19px;   
        margin-left: 15px;
    }
    @media (max-width: 730px) {
        width: 28.91px;
        height: 29.22px;
        margin-left: 22px;
    }
}

// right side
.summary_cart {
    position:fixed;
    top: 141.4px;
    right: 42px;    
    height: fit-content;
    display: flex;
    flex-direction: column;
    transition: all 0.4s ease;
    min-width:181px;
    width: 418px;
    background-color: white;
    @media (max-width: 1080px) {
        width: 368px;
    }
    @media (max-width: 830px) {
        width: 318px;
    }
    
    @media (max-width:730px) {
        bottom: 0;
        top: auto;
        left: 0;
        width: 100%;
        padding: 70px;
        border-top: 2px #00000026  solid;
    }

    @media (max-width: 480px) {
        padding-top: 35px;
        padding-bottom: 35px;
    }
}

.summary_cart_table {
    font-family: Inter;
    margin-bottom: 42px;
}

.summary_cart_table_header {   
    font-weight: 500;
    font-style: Medium;
    line-height: 100%;
    letter-spacing: 0%;
    font-size: 20.72px;
     @media (max-width: 1080px) {
        font-size: 18.22px;
    }
    @media (max-width: 830px) {
        font-size: 14.82px;
    }
    @media (max-width: 480px) {
        font-size: 11.42px;
    }
    @media (max-width: 730px) {
        margin-bottom: 20px;
        font-size: 15.16px;
    }
}

.summary__cart_table_header_boarder_line {
    max-width: 388px;
    height: 1px;
    color: #00000026;
    margin-top: 22px;
    margin-bottom: 12px;
    opacity: 85%;
    @media (max-width:730px) {
        display: none;
    }
}

.summary_cart_table_body {
    overflow: auto;
    height: 104px;
    padding-right: 30px;
}

.summary_cart_table_item {
    display: flex;
    justify-content: space-between;

    font-weight: 400;
    font-style: Regular;
    line-height: 100%;
    letter-spacing: 0%;
    color: #454545;    
    font-size: 17.57px;
    margin-bottom: 22px;
    @media (max-width: 1080px) {
        font-size: 15.53px;
    }
    @media (max-width: 830px) {
        font-size: 12.63px;
    }
}

.summary_cart_bottons_group {
    display: flex;
    justify-content: center;
    flex-direction: column;
}

.summary_cart_reserve_button {
    height: 57;
    opacity: 1;
    gap: 10px;
    border-radius: 30px;
    background-color: #000000;
    color: #FFFFFF;
    margin-bottom: 10px;

    font-size: 17.57px;
    @media (max-width: 1080px) {
        font-size: 15.53px;
    }

    @media (max-width: 830px) {
        font-size: 12.63px;
    }
}

.summary_cart_reserve_button_about {
    font-family: Inter;
    font-weight: 400;
    font-style: Regular;
    font-size: 16.07px;
    line-height: 100%;
    letter-spacing: 0%;
    color: #454545;

    @media (max-width: 1080px) {
        font-size: 15.53px;
    }

    @media (max-width: 830px) {
        font-size: 12.63px;
    }
}

/* width */
.summary_cart_table_body::-webkit-scrollbar {
  width: 5px;
}

/* Track */
.summary_cart_table_body::-webkit-scrollbar-track {
  background: #FFFFFF;
  margin-top: 5px;
  margin-bottom: 5px;
  min-height: 5px;
  max-height: 5px;
}

/* Handle */
.summary_cart_table_body::-webkit-scrollbar-thumb {
  background: #6C6C6C;
  border-radius: 15px;

}

/* Handle on hover */
.summary_cart_table_body::-webkit-scrollbar-thumb:hover {
//   background:;
}

